# ESE650_Final_Race

./: 615-2025-04-27-03-39-32.csv  ICRA_pure_pursuit.py  ICRA_smoothed_final_waypoints.csv  README.md  final_waypoints_1.csv  levine_race5.pgm  levine_race5.yaml  pure_pursuit_boxes.py  pure_pursuit_final.py  pure_pursuit_final_2.py  pure_pursuit_final_3.py  pure_pursuit_finalrace.py  pure_pursuit_levine.py  pure_pursuit_obstacle.py  race3_new.pgm  race3_new.yaml  smoothed_final_waypoints_original.csv
final_race/: CMakeLists.txt  package.xml  setup.py
final_race/scripts/: click_point_saver.py  clicked_points.csv  pure_pursuit_node_10_11.py  pure_pursuit_node_opp.py  visualize_click_points.py
final_race/src/: final_race_node.cpp
